 ** Fixed: {{{Core\Conditions\Categories\PlayerAttributes.lua:60: attempt to call upvalue "GetInstanceDifficulty" (a nil value) }}}
 ** The ALPHA_STACKREQ and ALPHA_DURATIONREQ data processor hooks should now properly trigger the TMW_ICON_UPDATED event when their state changes, which will allow meta icons (that check icons that implement these hooks) to properly update as needed.

===v6.1.2===
 * Added a new tag [LocType] to display the category of loss of control icon types.
 * New slash command for changing profiles: /tmw profile "Profile Name"
 * Animations can now be anchored to different components of an icon (when appropriate).
 
 * Bug Fixes:
 ** Designed a new protocol for sharing class spells to prevent the old version of it that was dramatically errored from leaking into a new version of it.
 ** --LastUpdateTime-type values should now only be set after an update completes so that in the event of a "script ran too long" error, the update will be ran again in the next cycle.--
 ** Icon Color Flash animations should now work correctly.
 ** Rewrote (but mostly just refactored) the database initialization process so that it runs in a much more logical fashion, and also so it allows for upgrades in the "global" DB namespace to run when they are supposed to.
 ** Rewrote (but mostly just refactored) event configuration code.
 ** The [Opacity] tag should now properly return a number instead of a boolean.
 ** Added Mind Quickening to the IncreasedSpellHaste equivalency
 ** Fixed {{{[string "ConditionEvents_SPELLCHARGETIME"] line 3: attempt to call global 'GetSpellCharges' (a nil value)}}}
 ** The group Only show in combat setting is now handled by the group's event handlers to prevent Script ran too long errors (hopefully).
 ** Invented a new method for moving the Icon Editor so that it won't jump around all over the place anymore.
 ** Fixed an issue with DetectFrame for GroupModule_GroupPosition (Thanks to ChairmanKaga, ticket #740).